fixes #539 sync jdk11 branch to 1.6.x to ensure code similarity (#540)